fix: responsive mobile layout invisible scrollbar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,3 +9,12 @@ body {
     flex-direction: column;
 }
 
+@media screen and (max-width: 500px) {
+    .container{
+        width: 400px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+    }
+}
