--- a/src/components/LeafletMap/LeafletMap.module.css
+++ b/src/components/LeafletMap/LeafletMap.module.css
@@ -4,7 +4,8 @@
 }
 .container {
     height: 50vh;
-    width: 960px;
+    width: 100%;
+    max-width: 960px;
     display: flex;
     align-items: center;
     justify-content: center;
