--- a/src/components/LocationPicker/LocationPicker.module.css
+++ b/src/components/LocationPicker/LocationPicker.module.css
@@ -6,3 +6,13 @@
     justify-content: center;
     flex-direction: column;
 }
+.locationGrid {
+    width: 100%;
+    scrollbar-width: none;
+}
+
+@media screen and (max-width: 500px) {
+    .container {
+        width: 300px;
+    }
+}
